--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,10 @@ body div {
   z-index: 1;
 }
 
+.hide {
+  display: hidden;
+}
+
 .container {
   z-index: inherit;
   width: 50%;
@@ -413,7 +417,7 @@ body div {
     height: 380px;
     margin: auto 1.5%;
     border: 4px solid rgb(97, 97, 97);
-    overflow: auto;
+    overflow-y: auto;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
