--- a/public/style.css
+++ b/public/style.css
@@ -371,39 +371,6 @@ body div {
     margin-top: 10%;
   }
 
-  .weatherContainer {
-    min-height: 120px;
-    cursor: pointer;
-  }
-
-  .weatherLocation {
-    padding-left: 5%;
-    width: 45%;
-    font-size: 3.25vw;
-  }
-
-  .weatherImage {
-    margin-left: auto;
-    width: 7vw;
-    height: 7vw;
-  }
-
-  .weatherTemperature {
-    width: 45%;
-    padding-left: 5%;
-    padding-bottom: 5%;
-    margin-top: auto;
-    font-size: 3.25vw;
-  }
-
-  .weatherDescription {
-    margin-top: auto;
-    margin-left: auto;
-    padding-right: 5%;
-    padding-bottom: 5%;
-    font-size: 3.25vw;
-  }
-
   .profileContainer {
     width: 100%;
     height: 380px;
@@ -421,4 +388,11 @@ body div {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+}
+
+.lastSearched {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  text-align: center;
 }
