--- a/public/style.css
+++ b/public/style.css
@@ -396,5 +396,18 @@ body div {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  text-align: center;
+  justify-content: center;
+  margin: auto;
+  width: 30%;
+}
+
+.lastSignedName {
+  margin-top: 10px;
+  background-color: white;
+  padding: 5px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid #ccc;
 }
