--- a/public/loginstyle.css
+++ b/public/loginstyle.css
@@ -1,25 +1,17 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  background-color: #e8d6cb;
 }
-<<<<<<< Updated upstream
-=======
-/* * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-} */
-
->>>>>>> Stashed changes
 form {
   width: 500px;
-  min-height: 400px;
+  min-height: 300px;
   height: auto;
-  border-radius: 5px;
+  border-radius: 20px;
   margin: 4% auto;
-
-  /* box-shadow: 0 9px 50px hsla(246, 82%, 64%, 80.31); */
+  background-color: #b58db6;
   padding: 4%;
-  background-color: #fff;
+  /* box-shadow: 0 9px 50px hsla(246, 82%, 64%, 80.31); */
+
   /* background-image: linear-gradient(-27deg, #e3fdf5 80%, #fff 2%); */
 }
 
