--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,9 @@
 html,
 body {
   margin: 0;
-  background-color: #E8D6CB;
+  background-color: #e8d6cb;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  color: #fff;
+  /* color: rgb(194, 230, 153); */
 
   /* background-image: linear-gradient(315deg, #5b6467 0%, #8b939a 74%); */
   -ms-overflow-style: none; /* IE and Edge */
@@ -13,6 +13,16 @@ body {
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none;
+}
+
+.logoutBtn {
+  background-color: #000000;
+  width: 120px;
+  height: 50px;
+  text-align: center;
+  /* position: absolute; */
+  padding-top: 22px;
+  margin-left: 95%;
 }
 
 .githubBackground {
@@ -25,9 +35,7 @@ body::-webkit-scrollbar {
   opacity: 0.05;
 }
 
-
-
-body div {
+.body div {
   z-index: 1;
 }
 
@@ -50,8 +58,7 @@ body div {
   z-index: inherit;
   text-align: center;
   width: 50%;
-
-  font-size: 1.5vw;
+  /* font-size: 1.5vw; */
 }
 
 .usernameLabel {
@@ -91,7 +98,7 @@ body div {
   border: 2px solid transparent;
 }
 
-.fa{
+.fa {
   margin-top: 15px;
 }
 
@@ -111,10 +118,9 @@ body div {
   flex-wrap: wrap;
 }
 
-.profileName{
+.profileName {
   font-size: 20px;
   text-decoration: none;
-
 }
 
 .profileContainer {
@@ -128,7 +134,7 @@ body div {
   border-radius: 10px;
   background-color: #6ab88bad;
   margin-left: 10%;
-      margin-top: 3%;
+  margin-top: 3%;
 }
 
 /* the github profile image */
@@ -147,19 +153,18 @@ body div {
 .profileContainer a {
   z-index: inherit;
   position: absolute;
-
-  margin-top: 200px;
+  margin-top: 210px;
   margin-left: 50%;
   transform: translateX(-50%);
 }
 
 .profileContainer a:link {
-  color: black;
+  color: #fff;
 }
 
 /* visited link */
 .profileContainer a:visited {
-  color: black;
+  color: #fff;
 }
 
 /* mouse over link */
@@ -177,11 +182,11 @@ body div {
   text-align: center;
   z-index: inherit;
   position: absolute;
-  margin-top: 235px;
+  margin-top: 250px;
   margin-left: 50%;
   transform: translateX(-50%);
   font-weight: bold;
-
+  color: white;
   font-size: 0.9rem;
   display: flex;
   justify-content: space-between;
@@ -197,7 +202,6 @@ body div {
 .bio {
   z-index: inherit;
   position: absolute;
-
   width: 95%;
   height: 80px;
   margin-top: 280px;
@@ -210,17 +214,18 @@ body div {
   z-index: inherit;
   width: 100%;
   height: 95%;
-  
   overflow: auto;
-  text-align:start;
+  text-align: start;
   margin-left: 5px;
 }
 
 .bio div p {
-  
+  color: #fff;
   z-index: inherit;
   width: 100%;
   overflow: auto;
+  margin-top: 32px;
+  margin-left: 12px;
 }
 
 .infoContainer {
@@ -236,26 +241,25 @@ body div {
   scrollbar-width: none; /* Firefox */
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
+
   margin-left: 5%;
 }
 
 .infoContainer h1 {
   padding-top: 5%;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;s
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   z-index: inherit;
   margin: auto 20%;
+  /* color: white; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .infoContainer::-webkit-scrollbar {
   display: none;
 }
-.repoHeader{
 
-
-}
 .cloneRepo {
+  color: #000000;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   z-index: inherit;
   width: 50%;
@@ -263,7 +267,7 @@ body div {
   /* font-size: 20px; */
   margin-top: 15px;
   /* border: 1px solid rgb(97, 97, 97); */
-  border-radius: 30px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -273,12 +277,14 @@ body div {
 
   transition: ease-in-out 600ms;
   backface-visibility: hidden;
-  background-color: #B58DB6;
+  /* background-color: #b58db6; */
+  background-color: rgb(41 41 54 / 38%);
 }
 
 .cloneRepo:hover {
   transform: scale(1.05);
 }
+
 h1 {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
@@ -288,21 +294,22 @@ h1 {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 20px;
-  
+  /* text-align: center; */
 }
 
 .repoName a:link {
   color: black;
+  text-decoration: none;
 }
 
 /* visited link */
 .repoName a:visited {
-  color: black;
+  color: white;
 }
 
 /* mouse over link */
 .repoName a:hover {
-  color: grey;
+  color: rgb(87, 138, 99);
 }
 
 /* selected link */
@@ -310,13 +317,8 @@ h1 {
   color: black;
 }
 
-.repoStar {
-  font-family: "FontAwesome";
-  color: rgba(228, 228, 9, 0.911);
-}
-
 .fa-star {
-  color: #f5c59b;
+  color: #000;
 }
 
 .lastSearched {
@@ -339,24 +341,46 @@ h1 {
   border: 1px solid #ccc;
 }
 
-.btn{
-  background-color: #5D2E46;
+.btn {
+  background-color: #000;
+  /* color: #fff; */
+}
+
+a {
   color: #fff;
-  
+  text-decoration: none;
 }
-a{
-  color: rgb(255, 255, 255);
-}
+
 @media screen and (max-width: 800px) {
-  .usernameClass {
+  .logoutBtn {
+    /* margin-left: 80%; */
+    left: 0;
+    top: 0;
+    display: block;
+    width: 60px;
+    height: 15px;
+    text-align: center;
+    font-size: 13px;
+    clear: both;
+  }
+  .usernameInput {
+    height: 30px;
+    width: 180px;
+    text-align: center;
+  }
+  .container {
+    margin: auto;
+    padding: 15%;
+  }
+  /* .usernameClass {
     text-align: center;
     width: 50%;
 
     font-size: 3vw;
-  }
+  } */
 
   .usernameLabel {
-    font-size: 4vw;
+    font-size: 2vw;
   }
 
   .submitButton {
@@ -389,6 +413,5 @@ a{
     overflow-y: auto; */
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
-    
   }
 }
