--- a/public/style.css
+++ b/public/style.css
@@ -17,12 +17,14 @@ body::-webkit-scrollbar {
 
 .logoutBtn {
   background-color: #000000;
-  width: 120px;
-  height: 50px;
+  width: 100px;
+  height: 40px;
   text-align: center;
   /* position: absolute; */
   padding-top: 22px;
-  margin-left: 95%;
+  margin-left: 94%;
+  font-size: 18px;
+  border-radius: 8px;
 }
 
 .githubBackground {
@@ -133,8 +135,10 @@ body::-webkit-scrollbar {
   /* border: 2px solid rgb(97, 97, 97); */
   border-radius: 10px;
   background-color: #6ab88bad;
-  margin-left: 10%;
+  margin-left: 15%;
   margin-top: 3%;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* the github profile image */
@@ -230,18 +234,18 @@ body::-webkit-scrollbar {
 
 .infoContainer {
   z-index: inherit;
-  width: 63%;
+  width: 50%;
   height: 520px;
-  /* margin: 0 1.5%; */
-  /* border: 4px solid rgb(97, 97, 97);
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
-  /* border-radius: 10px; */
-  /* overflow: auto; */
+  background-color: #ede5e5b0;
+  margin: 0 0.5%;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 10px;
+  overflow: auto;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   display: flex;
   flex-wrap: wrap;
-
+  justify-content: center;
   margin-left: 5%;
 }
 
@@ -250,35 +254,34 @@ body::-webkit-scrollbar {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   z-index: inherit;
   margin: auto 20%;
-  /* color: white; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
+
 .infoContainer::-webkit-scrollbar {
   display: none;
 }
-
+.bio div::-webkit-scrollbar {
+  display: none;
+}
 .cloneRepo {
   color: #000000;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   z-index: inherit;
-  width: 50%;
+  width: 60%;
   height: 20%;
   /* font-size: 20px; */
   margin-top: 15px;
-  /* border: 1px solid rgb(97, 97, 97); */
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 40px;
-
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 2px 2px;
-
   transition: ease-in-out 600ms;
   backface-visibility: hidden;
-  /* background-color: #b58db6; */
   background-color: rgb(41 41 54 / 38%);
+  /* background-color: #6ab88bad; */
 }
 
 .cloneRepo:hover {
@@ -395,22 +398,11 @@ a {
     margin-top: 10%;
   }
 
-  /* .profileContainer {
-    width: 100%;
-    height: 380px;
-    margin: auto 1.5%;
-    margin-bottom: 5%;
-    border: 2px solid rgb(97, 97, 97);
-    background-color: rgba(141, 94, 8, 0.87);
-  } */
-
   .infoContainer {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     width: 100%;
     height: 380px;
-    /* margin: auto 1.5%;
-    border: 4px solid rgb(97, 97, 97);
-    overflow-y: auto; */
+
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
